# read_note

./: README.md
architecture/: large_scale_distributed_storage_system.md  scalablility_rules.md  taobao.md
exercise/json/toy_json_cpp/: CMakeLists.txt  encodings.cc  encodings.h  example.cc  json_value.cc  json_value.h  json_value.hpp  main.cc  toy_json.cc  toy_json.h  toy_json_vaule.h
exercise/toylang/: CMakeLists.txt  main.cc  readme.md
exercise/toylang/compiler/: node.h
exercise/toylang/parser/: node.cc  toylang.l  toylang.y
study/architecture/: large_scale_distributed_storage_system.md
